# cw721-updatable

./: Cargo.toml  README.md
examples/: archid.rs  schema.rs
schema/: execute_msg.json
src/: contract_tests.rs  execute.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs
