[package]
name = "cw721-base-updatable"
version = "1.0.4"
edition = "2018"
description = "Basic implementation cw721 NFTs with updatable metadata"
repository = "https://github.com/archway-network/cw721-updatable"

license = "Apache-2.0"
keywords = ["CosmWasm", "cw721", "cw721-base"]
authors = [
  "Drew Taylor <drew.taylor@philabs.xyz>",
]

exclude = ["artifacts/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.13.4"
cw2 = "0.13.4"
cw721-updatable = { path = "./packages/cw721-updatable", version = "1.0.0" }
cw-storage-plus = "0.13.4"
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.10"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
